src/objects/nEmployment_Web_site__c.object
<CustomObject>
    <fields>
        <fullName>E_W_Name__c</fullName>
        <label>E_W_Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Per_Post__c</fullName>
        <label>Price_Per_Post</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <label>Web_Address</label>
        <type>Url</type>
    </fields>
    <label>nEmployment Web site</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EW-{000}</displayFormat>
        <label>nEmployment Web site id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>nEmployment Web sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>